added database access and logic
