# controllers/Tenants.js
@@ -6,6 +6,14 @@ var url = require('url');
 var Tenants = require('./TenantsService');
 
 
+module.exports.tenantsPOST = function tenantsPOST (req, res, next) {
+  Tenants.tenantsPOST(req.swagger.params, res, next);
+};
+
 module.exports.tenantsGET = function tenantsGET (req, res, next) {
   Tenants.tenantsGET(req.swagger.params, res, next);
+};
+
+module.exports.tenantsIdDELETE = function tenantsIdDELETE (req, res, next) {
+  Tenants.tenantsIdDELETE(req.swagger.params, res, next);
 };
